# ScratchWS

./: .gitignore  CMakeLists.txt  README.md  main.xml
Uri/: CMakeLists.txt  README.md
Uri/include/Uri/: Uri.hpp
Uri/src/: Uri.cpp
Uri/test/: CMakeLists.txt
Uri/test/src/: UriTests.cpp
